bk_ida/gccida/g1/lex_number
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1300:12: error: expected expression
lex_number::anon1 v5; // r15d 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1326:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1327:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1328:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1335:12: error: expected expression
lex_number::anon1 j; // ecx 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1335:1: error: redefinition of label 'lex_number'
lex_number::anon1 j; // ecx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1300:1: note: previous definition is here
lex_number::anon1 v5; // r15d 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1340:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1345:12: error: expected expression
lex_number::anon1 floatflag; // [rsp+Ch] [rbp-104h] 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1345:1: error: redefinition of label 'lex_number'
lex_number::anon1 floatflag; // [rsp+Ch] [rbp-104h] 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1300:1: note: previous definition is here
lex_number::anon1 v5; // r15d 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1392:1: error: use of undeclared identifier 'v5'
v5 = NOT_FLOAT; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1392:6: error: use of undeclared identifier 'NOT_FLOAT'
v5 = NOT_FLOAT; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1404:6: error: use of undeclared identifier 'v5'
if ( v5 == AFTER_POINT ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1404:12: error: use of undeclared identifier 'AFTER_POINT'
if ( v5 == AFTER_POINT ) 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1409:1: error: use of undeclared identifier 'v5'
v5 = AFTER_POINT; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1409:6: error: use of undeclared identifier 'AFTER_POINT'
v5 = AFTER_POINT; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1421:7: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v19 = sch_istable[v17]; 
      ^~~~~~~~~~~
      _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1425:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v20 = hex_value[v17]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1463:1: error: use of undeclared identifier 'v5'
v5 = AFTER_EXPON; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/c-lex.c:1463:6: error: use of undeclared identifier 'AFTER_EXPON'
v5 = AFTER_EXPON; 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/lex_number/src/obj/c-lex.o] Error 1
